--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "chartjs-adapter-moment": "^1.0.1",
+    "primeicons": "^7.0.0",
     "vue": "^3.2.13",
+    "vue-i18n": "^9.13.1",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
@@ -16,6 +22,8 @@
     "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "sass": "^1.77.7",
+    "sass-loader": "^14.2.1",
     "typescript": "~4.5.5"
   },
   "browserslist": [
